...
                android:id="@+id/button_prev_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_skip_previous"/>

            <TextView
                android:id="@+id/tv_short_description_step"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:text="Short Description" />


            <ImageView
                android:id="@+id/button_next_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_skip_next"/>

        </RelativeLayout>
...
